---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type a : array 1..1 of int\na(1) := 1"
---
"a"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No)), ) of int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 27..28: cannot call or subscript `a`
| note in file FileId(1) for 27..28: this is of type `a (alias of array 1 .. 1 of int)`
| info: only array variables can be subscripted
error in file FileId(1) at 32..34: cannot assign into expression
| error in file FileId(1) for 27..31: not a reference to a variable
